--- a/mavem/loja/pom.xml
+++ b/mavem/loja/pom.xml
@@ -6,14 +6,25 @@
   <groupId>br.com.cruzvita</groupId>
   <artifactId>loja</artifactId>
   <version>1.0.0</version>
+  <properties>
+     <maven.compiler.source>1.7</maven.compiler.source>
+     <maven.compiler.target>1.7</maven.compiler.target>
+</properties>
   
-   
+  
+  <build>
+     <plugins>
+     
+     </plugins>
+  </build>
+  
+  
   <dependencies>
   
     <dependency> 
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>    
-        <version>4.12</version>
+        <version>4.12</version>  
         <scope>test</scope>
     </dependency>
     
